--- a/index.html
+++ b/index.html
@@ -1,67 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Portfolio</title>
+    <title>User Information Form</title>
     <style>
-        body{
-            margin:0px,200px,0px,200px  ;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            text-align: center;
+        }
+        #userInfoForm {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        label {
+            font-weight: bold;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        #displayUserInfo {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #f2f2f2;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
+    <h1>User Information Form</h1>
+    <form id="userInfoForm">
+        <label for="username">Username: </label>
+        <input type="text" id="username" name="username" required><br><br>
 
+        <label for="email">Email: </label>
+        <input type="email" id="email" name="email" required><br><br>
 
-<h1 style ="margin-left: 550px;">KALAIYARASAN R</h1>
-<h2 style ="margin-left: 620px;">FRESHER</h2>
-<hr>
-<hr>
-<h3>About Me</h3>
-<h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero saepe nisi deserunt atque praesentium dicta in aliquam necessitatibus temporibus rem, consequatur, eos, quasi minima vero excepturi fuga perspiciatis repudiandae optio!</h4>
-<hr>
-<hr>
-<h3>AREA OF INTEREST</h3>
-<ul>
-    <li>CLOUD COMPUTING</li>
-    <li>FRONT-END DEVELOPMENT</li>
+        <label for="password">Password: </label>
+        <input type="password" id="password" name="password" required><br><br>
 
-</ul>
-<hr>
-<hr>
-<h3>HOBBIES</h3>
-<ol>
-    <li>SINGING</li>
-    <li>TEACHING</li>
-</ol>
-<hr>
-<hr>
+        <button type="submit">Submit</button>
+    </form>
 
-<h3>PROJECTS</h3>
-<table  border="1" class = "t1" style = "position:relative ;top:10px;">
-    <tr>
-        <th>Project</th>
-        <th>Description</th>
-        <th>Skills</th>
-        <th>Link</th>
-    </tr>
-    <tr>
-        <td>Project 1</td>
-        <td>A description of Project 1.</td>
-        <td>HTML, CSS, JavaScript</td>
-        <td><a href="project1.html">View Project</a></td>
-    </tr>
-    <tr>
-        <td>Project 2</td>
-        <td>A description of Project 2.</td>
-        <td>Python, Flask</td>
-        <td><a href="project2.html">View Project</a></td>
-    </tr>
-    <tr>
-        <td>Project 3</td>
-        <td>A description of Project 3.</td>
-        <td>Java, Android</td>
-        <td><a href="project3.html">View Project</a></td>
-    </tr>
-</table>
+    <div id="displayUserInfo"></div>
 
+    <script>
+        document.getElementById('userInfoForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            // Get values from the input fields
+            var username = document.getElementById('username').value;
+            var email = document.getElementById('email').value;
+            var password = document.getElementById('password').value;
+
+            // Display user information
+            var displayArea = document.getElementById('displayUserInfo');
+            displayArea.innerHTML = `
+                <h2>User Information:</h2>
+                <p><strong>Username:</strong> ${username}</p>
+                <p><strong>Email:</strong> ${email}</p>
+                <p><strong>Password:</strong> ${password}</p>
+            `;
+        });
+    </script>
 </body>
 </html>
